--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
-    "dbInit": "ts-node ./DBinit/init.ts"
+    "dbInit": "ts-node ./DBinit/init.ts",
+    "migrate": "ts-node node_modules/migrate-mongo/bin/migrate-mongo"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/migrate-mongo": "^10.0.4",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "migrate-mongo": "^11.0.0",
     "mongoose": "^7.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
